// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new_open_issues 1`] = `
<DrilldownLink
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  component="abcd-key"
  metric="new_open_issues"
  periodDate={null}
>
  <div
    className="overview-quality-gate-condition-container"
  >
    <div
      className="overview-quality-gate-condition-value"
    >
      <Measure
        measure={
          Object {
            "leak": "10",
            "value": "10",
          }
        }
        metric={
          Object {
            "key": "new_open_issues",
            "name": "new_open_issues",
            "type": "INT",
          }
        }
      />
    </div>
    <div>
      <div
        className="overview-quality-gate-condition-metric"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="new_open_issues"
        />
        new_open_issues
      </div>
      <div
        className="overview-quality-gate-threshold"
      >
        quality_gates.operator.GT
         
        0
      </div>
    </div>
  </div>
</DrilldownLink>
`;

exports[`new_reliability_rating 1`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "id": "abcd-key",
        "resolved": "false",
        "severities": "BLOCKER,CRITICAL,MAJOR,MINOR",
        "sinceLeakPeriod": "true",
        "types": "BUG",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container"
  >
    <div
      className="overview-quality-gate-condition-value"
    >
      <Measure
        measure={
          Object {
            "leak": "3",
            "value": "3",
          }
        }
        metric={
          Object {
            "key": "new_reliability_rating",
            "name": "new_reliability_rating",
            "type": "RATING",
          }
        }
      />
    </div>
    <div>
      <div
        className="overview-quality-gate-condition-metric"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="new_reliability_rating"
        />
        new_reliability_rating
      </div>
      <div
        className="overview-quality-gate-threshold"
      >
        quality_gates.operator.GT.rating
         
        A
      </div>
    </div>
  </div>
</Link>
`;

exports[`new_security_rating 1`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "id": "abcd-key",
        "resolved": "false",
        "severities": "BLOCKER,CRITICAL,MAJOR,MINOR",
        "sinceLeakPeriod": "true",
        "types": "VULNERABILITY",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container"
  >
    <div
      className="overview-quality-gate-condition-value"
    >
      <Measure
        measure={
          Object {
            "leak": "3",
            "value": "3",
          }
        }
        metric={
          Object {
            "key": "new_security_rating",
            "name": "new_security_rating",
            "type": "RATING",
          }
        }
      />
    </div>
    <div>
      <div
        className="overview-quality-gate-condition-metric"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="new_security_rating"
        />
        new_security_rating
      </div>
      <div
        className="overview-quality-gate-threshold"
      >
        quality_gates.operator.GT.rating
         
        A
      </div>
    </div>
  </div>
</Link>
`;

exports[`new_sqale_rating 1`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "id": "abcd-key",
        "resolved": "false",
        "sinceLeakPeriod": "true",
        "types": "CODE_SMELL",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container"
  >
    <div
      className="overview-quality-gate-condition-value"
    >
      <Measure
        measure={
          Object {
            "leak": "3",
            "value": "3",
          }
        }
        metric={
          Object {
            "key": "new_sqale_rating",
            "name": "new_sqale_rating",
            "type": "RATING",
          }
        }
      />
    </div>
    <div>
      <div
        className="overview-quality-gate-condition-metric"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="new_sqale_rating"
        />
        new_sqale_rating
      </div>
      <div
        className="overview-quality-gate-threshold"
      >
        quality_gates.operator.GT.rating
         
        A
      </div>
    </div>
  </div>
</Link>
`;

exports[`open_issues 1`] = `
<DrilldownLink
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  component="abcd-key"
  metric="open_issues"
  periodDate={null}
>
  <div
    className="overview-quality-gate-condition-container"
  >
    <div
      className="overview-quality-gate-condition-value"
    >
      <Measure
        measure={
          Object {
            "leak": "10",
            "value": "10",
          }
        }
        metric={
          Object {
            "key": "open_issues",
            "name": "Open open_issues",
            "type": "INT",
          }
        }
      />
    </div>
    <div>
      <div
        className="overview-quality-gate-condition-metric"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="open_issues"
        />
        Open open_issues
      </div>
      <div
        className="overview-quality-gate-threshold"
      >
        quality_gates.operator.GT
         
        0
      </div>
    </div>
  </div>
</DrilldownLink>
`;

exports[`reliability_rating 1`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "id": "abcd-key",
        "resolved": "false",
        "severities": "BLOCKER,CRITICAL,MAJOR,MINOR",
        "types": "BUG",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container"
  >
    <div
      className="overview-quality-gate-condition-value"
    >
      <Measure
        measure={
          Object {
            "leak": "3",
            "value": "3",
          }
        }
        metric={
          Object {
            "key": "reliability_rating",
            "name": "reliability_rating",
            "type": "RATING",
          }
        }
      />
    </div>
    <div>
      <div
        className="overview-quality-gate-condition-metric"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="reliability_rating"
        />
        reliability_rating
      </div>
      <div
        className="overview-quality-gate-threshold"
      >
        quality_gates.operator.GT.rating
         
        A
      </div>
    </div>
  </div>
</Link>
`;

exports[`security_rating 1`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "id": "abcd-key",
        "resolved": "false",
        "severities": "BLOCKER,CRITICAL,MAJOR,MINOR",
        "types": "VULNERABILITY",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container"
  >
    <div
      className="overview-quality-gate-condition-value"
    >
      <Measure
        measure={
          Object {
            "leak": "3",
            "value": "3",
          }
        }
        metric={
          Object {
            "key": "security_rating",
            "name": "security_rating",
            "type": "RATING",
          }
        }
      />
    </div>
    <div>
      <div
        className="overview-quality-gate-condition-metric"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="security_rating"
        />
        security_rating
      </div>
      <div
        className="overview-quality-gate-threshold"
      >
        quality_gates.operator.GT.rating
         
        A
      </div>
    </div>
  </div>
</Link>
`;

exports[`sqale_rating 1`] = `
<Link
  className="overview-quality-gate-condition overview-quality-gate-condition-error"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/issues",
      "query": Object {
        "id": "abcd-key",
        "resolved": "false",
        "types": "CODE_SMELL",
      },
    }
  }
>
  <div
    className="overview-quality-gate-condition-container"
  >
    <div
      className="overview-quality-gate-condition-value"
    >
      <Measure
        measure={
          Object {
            "leak": "3",
            "value": "3",
          }
        }
        metric={
          Object {
            "key": "sqale_rating",
            "name": "sqale_rating",
            "type": "RATING",
          }
        }
      />
    </div>
    <div>
      <div
        className="overview-quality-gate-condition-metric"
      >
        <IssueTypeIcon
          className="little-spacer-right"
          query="sqale_rating"
        />
        sqale_rating
      </div>
      <div
        className="overview-quality-gate-threshold"
      >
        quality_gates.operator.GT.rating
         
        A
      </div>
    </div>
  </div>
</Link>
`;
